--- a/zhoukaomoni3/src/main/res/layout/activity_splash.xml
+++ b/zhoukaomoni3/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/iv"
         android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/sunflower"/>
 </LinearLayout>
